[gd_scene load_steps=25 format=2]

[ext_resource path="res://themes/inventory/inventory.tres" type="Theme" id=1]
[ext_resource path="res://interface/inventory/Inventory.gd" type="Script" id=2]
[ext_resource path="res://shaders/gradient/controllable_gradient.shader" type="Shader" id=3]
[ext_resource path="res://shaders/gradient/gradient_traffic_light.png" type="Texture" id=4]
[ext_resource path="res://interface/inventory/health_display/health_monitor3.png" type="Texture" id=5]
[ext_resource path="res://interface/inventory/health_display/health_monitor1.png" type="Texture" id=6]
[ext_resource path="res://interface/inventory/health_display/health_monitor2.png" type="Texture" id=7]
[ext_resource path="res://interface/inventory/health_display/health_monitor4.png" type="Texture" id=8]
[ext_resource path="res://interface/inventory/health_display/health_monitor5.png" type="Texture" id=9]
[ext_resource path="res://interface/inventory/health_display/health_monitor6.png" type="Texture" id=10]
[ext_resource path="res://interface/inventory/health_display/health_monitor7.png" type="Texture" id=11]
[ext_resource path="res://interface/inventory/health_display/health_monitor8.png" type="Texture" id=12]
[ext_resource path="res://interface/inventory/health_display/health_monitor9.png" type="Texture" id=13]
[ext_resource path="res://interface/inventory/health_display/health_monitor10.png" type="Texture" id=14]
[ext_resource path="res://interface/inventory/health_display/health_monitor11.png" type="Texture" id=15]
[ext_resource path="res://interface/inventory/health_display/health_monitor12.png" type="Texture" id=16]
[ext_resource path="res://interface/inventory/health_display/health_monitor13.png" type="Texture" id=17]
[ext_resource path="res://interface/inventory/health_display/portrait.png" type="Texture" id=18]
[ext_resource path="res://interface/inventory/examine_panel/ExaminePanel.tscn" type="PackedScene" id=19]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/x = 1.0
shader_param/gradient = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]
}

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/x = 1.0
shader_param/gradient = ExtResource( 4 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectsLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EffectsLayer/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectsLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EffectsLayer/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Inventory" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="MainScreen" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreen/VBoxContainer"]
margin_right = 56.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftContainer" type="VBoxContainer" parent="MainScreen/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 56.0

[node name="HealthDisplay" type="CenterContainer" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer"]
margin_right = 20.0
margin_bottom = 20.0

[node name="Background" type="TextureRect" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer/HealthDisplay"]
material = SubResource( 1 )
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer/HealthDisplay"]
autoplay = "pulse"
anims/pulse = SubResource( 2 )

[node name="Portrait" type="TextureRect" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer/HealthDisplay"]
margin_left = 3.0
margin_right = 17.0
margin_bottom = 20.0
texture = ExtResource( 18 )

[node name="EquipmentDisplay" type="TextureRect" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 24.0

[node name="ItemPreview" type="HBoxContainer" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer"]
margin_top = 28.0
margin_right = 20.0
margin_bottom = 36.0

[node name="Icon" type="TextureRect" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer/ItemPreview"]
margin_bottom = 8.0

[node name="Quantity" type="Label" parent="MainScreen/VBoxContainer/HBoxContainer/LeftContainer/ItemPreview"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 8.0

[node name="RightContainer" type="VBoxContainer" parent="MainScreen/VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 56.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="ItemPanel" type="PanelContainer" parent="MainScreen/VBoxContainer/HBoxContainer/RightContainer"]
material = SubResource( 5 )
margin_right = 32.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainScreen/VBoxContainer/HBoxContainer/RightContainer/ItemPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 30.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/VBoxContainer/HBoxContainer/RightContainer/ItemPanel/ScrollContainer"]
margin_right = 28.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CommandPanel" type="PanelContainer" parent="MainScreen/VBoxContainer/HBoxContainer/RightContainer"]
visible = false
margin_top = 30.0
margin_right = 32.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainScreen/VBoxContainer/HBoxContainer/RightContainer/CommandPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 30.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/VBoxContainer/HBoxContainer/RightContainer/CommandPanel/ScrollContainer"]
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 3 )
anims/show = SubResource( 4 )

[node name="EffectsLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="EffectsLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="ExaminePanel" parent="." instance=ExtResource( 19 )]
visible = false
